# FamForge

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/famforge/: bond.py  display_name_utils.py  generator.py  incantation.py  list.py  load_data.py  main.py  models.py  reveal.py  ritual.py  show.py  sigil.py  storage.py  summon.py  unlock.py  verify.py
src/famforge/data/: abilities_by_element.json  names_by_element.json  origins_by_element.json  quirks_standard_by_element.json  quirks_whimsical_by_element.json  species_by_element.json  titles_and_clans.json
src/scripts/: generate_json_data.py
tests/: test_incantation.py
